--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,8 @@ nav {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url(/image/img-1.jpeg);
   background: linear-gradient(rgba(0, 0, 0, 0.7)), url(/image/img-1.jpeg);
   min-height: 100vh;
+  background-position: center;
+  background-size: cover;
 }
 
 .p1-box {
