--- a/css/main.scss
+++ b/css/main.scss
@@ -24,7 +24,7 @@ nav{align-items: center;padding: 0 2em;}
 .img-nav{width: 40%;}
 
 
-.p1{background: linear-gradient(rgba(0,0,0,.7)), url(/image/img-1.jpeg);min-height: 100vh;}
+.p1{background: linear-gradient(rgba(0,0,0,.7)), url(/image/img-1.jpeg);min-height: 100vh;background-position: center;background-size: cover;}
 .p1-box{justify-content: flex-start;color: #fff;width: 80%;padding: 2em;}
 .p1 h1{font-size: 2rem;}
 .p1 p{margin: 1em 0 2em;}
