--- a/css/main.scss
+++ b/css/main.scss
@@ -28,7 +28,7 @@ nav{align-items: center;padding: 0 2em;}
 .p1-box{justify-content: flex-start;color: #fff;width: 80%;padding: 2em;}
 .p1 h1{font-size: 2rem;}
 .p1 p{margin: 1em 0 2em;}
-.btn-home, .btn-p2{padding: 1em 2em;color: #fff;background: $accent;text-decoration: none;font-weight: 600;}
+.btn-home, .btn-p2{padding: 1em 2em;color: #fff;background: $accent;text-decoration: none;font-weight: 600;font-size: .7em;}
 
 .p2{background: $back;}
 .p2-item{padding: 2em;}
