--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ nav {
   background: #eb0808;
   text-decoration: none;
   font-weight: 600;
-  font-size: .7em;
+  font-size: .8em;
 }
 
 .p2 {
@@ -330,6 +330,21 @@ footer p a {
     -ms-grid-columns: 100%;
         grid-template-columns: 100%;
     text-align: center;
+  }
+  .p3-item-box {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .p3-item-1 {
+    width: 100%;
+  }
+  .p3 img {
+    width: 40%;
   }
   .padding-left {
     padding-right: 0;
