--- a/css-2/menu-hambuguer.css
+++ b/css-2/menu-hambuguer.css
@@ -1,22 +1,28 @@
 *{box-sizing: border-box;margin: 0;padding: 0;}
 
-nav{background-color: #eb0808;color: #fff;display: flex;justify-content: space-between;}
+nav{color: #fff;display: flex;justify-content: space-between;position: absolute;
+top: 0;left: 0;width: 100%;z-index: 1;}
  
 nav .mainMenu{display: flex;list-style: none;}
 
 nav .mainMenu li a{display: inline-block;padding: 1em;text-decoration: none;
-color: #fff;font-size: .8em;font-weight: 500;}
-nav .mainMenu li a:hover{font-weight: 700;transition: .4s;border-top: .5em solid #fff;}
+color: #000;font-size: .8em;font-weight: 500;}
 
 nav .openMenu{font-size: 2em;margin: 1em;display: none;cursor: pointer;}
+
 nav .closeMenu{display: none;font-size: 2em;cursor: pointer;}
 
+nav.black{background:#fff;box-shadow: 0 0 30px #f1f1f1;position: fixed;z-index: 100;}
+nav.black img{width: 15%;}
 
 @media (max-width:900px){
-    nav .mainMenu{height: 50vh;position: fixed;top: 0;left: 0;right: 0;z-index: 10;flex-direction: column;
+    nav .mainMenu{min-height: 50vh;position: fixed;top: 0;left: 0;right: 0;z-index: 10;flex-direction: column;
     justify-content: center;align-items: center;background: #eb0808;transition: top 1s ease;display: none;}
  
     nav .mainMenu .closeMenu{display: block;position: absolute;top: 1em;right: 1em;}
-    nav .openMenu{display: block;}
+    nav .openMenu{display: block;color: #000;}
+    nav .mainMenu li a{color: #fff;}
     nav .mainMenu li a:hover{background: none;color: #f9d068;font-size: 1em;}
+
+    nav.block{position: sticky;}
 }
