--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -13,6 +15,7 @@ body {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -44,26 +47,33 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   padding: 0 2em;
+  overflow: hidden;
 }
 
 .img-nav {
-  width: 40%;
+  width: 30%;
+}
+
+nav.black {
+  background: #fff;
+  -webkit-box-shadow: 0 0 30px #f1f1f1;
+          box-shadow: 0 0 30px #f1f1f1;
 }
 
 .p1 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url(/image/img-1.jpeg);
-  background: linear-gradient(rgba(0, 0, 0, 0.7)), url(/image/img-1.jpeg);
+  background: url(/image/fundo-6.png);
   min-height: 100vh;
   background-position: center;
   background-size: cover;
+  position: relative;
 }
 
 .p1-box {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  color: #fff;
-  width: 80%;
+  color: #000;
+  width: 50%;
   padding: 2em;
 }
 
@@ -72,7 +82,7 @@ nav {
 }
 
 .p1 p {
-  margin: 1em 0 2em;
+  margin: .5em 0 2em;
 }
 
 .btn-home, .btn-p2 {
@@ -82,10 +92,11 @@ nav {
   text-decoration: none;
   font-weight: 600;
   font-size: .8em;
+  border-radius: 2em;
 }
 
 .p2 {
-  background: #F25C5C;
+  background: #F2F2F2;
 }
 
 .p2-item {
@@ -100,76 +111,188 @@ nav {
 
 .p3 {
   padding: 2em 2em 0 2em;
+  background: #f2f2f2;
 }
 
 .p3-box {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 40% 60%;
-      grid-template-columns: 40% 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.p3-item {
-  padding: 0 0em;
+  text-align: center;
 }
 
 .p3-item-box {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
 }
 
 .p3-item-1 {
-  width: 45%;
   padding: 1em;
-  margin: .5em;
-  border-radius: .5em;
-}
-
-.p3-item-1:hover {
-  -webkit-box-shadow: 0 0 1em #E5E3DB;
-          box-shadow: 0 0 1em #E5E3DB;
-}
-
-.padding-left {
-  padding-right: 1em;
-}
-
-.p3 img {
-  width: 20%;
-}
-
-.p3 h3 {
-  font-size: 1.2rem;
-  margin: .5em 0;
+  margin: 1em;
+  border-radius: 1em;
+  background: #fff;
+  -webkit-box-shadow: 0 0 .5em #F2F2F2;
+          box-shadow: 0 0 .5em #F2F2F2;
+  height: 100%;
 }
 
 .p3 p {
-  font-size: .8rem;
+  margin: .5em 0;
+}
+
+.p3 img {
+  width: 30%;
+  height: auto;
+}
+
+.p3-item-1 p {
+  color: #595959;
+}
+
+.youtube {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url(/image/camera.jpeg);
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/image/camera.jpeg);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 50vh;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  color: #fff;
 }
 
 .p4 {
-  background: #F2F2F2;
+  background: url(/image/fundo-1.png);
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+
+.p4 {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 2em;
+  min-height: 100vh;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.p4-projects {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.p4-projects h3 {
+  text-align: right;
+  margin: .5em;
+  text-align: center;
+}
+
+.p4_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 45%;
+  text-align: right;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin: 1em 0 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.p4_box img {
+  width: 10%;
+  height: auto;
+}
+
+.p4-carousel {
+  width: 60%;
+}
+
+.p4_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
-  padding: 2em;
+  -webkit-box-shadow: 0 0 0.5em #F2B279;
+          box-shadow: 0 0 0.5em #F2B279;
+  padding: 1em;
+  border-radius: 1em;
+  margin: .5em;
+}
+
+.p4_item img {
+  margin: 0 0em 0 0em;
+  width: 10%;
+  display: block;
+  margin: 1em auto;
 }
 
 .p4 h1 {
+  text-align: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.p4 h2 {
   color: #eb0808;
 }
 
-.p4 p {
+.p4 p, .p4 ul {
   margin: .5em 0;
-  font-size: .8rem;
+  width: 70%;
+}
+
+.p4 ul {
+  list-style-position: inside;
+}
+
+.p5 {
+  background: url(/image/fundo-3.png);
+  background-position: center;
+  background-size: cover;
 }
 
 .p5 {
@@ -177,8 +300,10 @@ nav {
       -ms-flex-align: start;
           align-items: flex-start;
   padding: 0 2em 2em;
-  text-align: center;
-  background: #F2F2F2;
+  text-align: left;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .p5 img {
@@ -187,6 +312,10 @@ nav {
 
 .p5 h3 {
   font-weight: 500;
+}
+
+.p5 p {
+  width: 60%;
 }
 
 .p6 {
@@ -251,7 +380,7 @@ nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background: #F25C5C;
+  background: #F2B279;
   color: #fff;
   padding: 2em;
 }
@@ -262,6 +391,13 @@ nav {
 
 .p9 {
   padding: 2em;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .p9-item {
@@ -269,7 +405,15 @@ nav {
 }
 
 .p9-item-1 {
-  margin: 1em 0;
+  margin: 0em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.p9-item-1 img {
+  width: 5%;
+  margin: 0 1em 0 0em;
 }
 
 .form-back {
@@ -277,6 +421,7 @@ nav {
           box-shadow: 0 0 1em #E5E3DB;
   padding: 2em;
   border-radius: .5em;
+  margin: 0 2em 0 0em;
 }
 
 .line {
@@ -286,8 +431,16 @@ nav {
 }
 
 .p9 h2 {
-  margin: 1em 0;
+  margin: 0em 0 1em;
   color: #8C030E;
+}
+
+.p9 h3 {
+  font-weight: 400;
+}
+
+footer {
+  background: #F2B8A2;
 }
 
 footer p {
@@ -305,7 +458,7 @@ footer p {
 }
 
 footer p a {
-  color: #eb0808;
+  color: #000;
   text-decoration: none;
 }
 
@@ -318,66 +471,80 @@ footer p a {
           justify-content: space-between;
 }
 
+.hidden {
+  display: none;
+}
+
 @media screen and (max-width: 900px) {
-  .p2-item {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    text-align: center;
+  .p1 {
+    background: #fff;
   }
-  .p3-box {
-    -ms-grid-columns: 100%;
-        grid-template-columns: 100%;
+  .p1 {
     text-align: center;
-  }
-  .p3-item-box {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
-  .p3-item-1 {
+  .p1-box {
     width: 100%;
   }
-  .p3 img {
-    width: 40%;
-  }
-  .padding-left {
-    padding-right: 0;
-  }
-  .p5 {
+  .p3-item-box, .p9 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .youtube, .p8 {
     text-align: center;
+  }
+  .p4 {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
-  .p5-item {
-    margin: 1em 0;
-  }
-  .p8, .p7 {
-    text-align: center;
-  }
-  .p7-box {
-    -ms-grid-columns: 100%;
-        grid-template-columns: 100%;
-    text-align: left;
-  }
-  .p9 {
+  .p4-projects {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    width: 100%;
+  }
+  .p4_box {
+    width: 100%;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .p4-carousel {
+    width: 100%;
+  }
+  .p4_item {
+    width: 100%;
+  }
+  .p4_item img {
+    width: 20%;
+  }
+  .p4 {
+    background: #f2f2f2;
+  }
+  .p4 {
+    padding: 1em;
   }
   .p9-item {
     width: 100%;
+  }
+  .f-i {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 /*# sourceMappingURL=main.css.map */
