--- a/css/main.scss
+++ b/css/main.scss
@@ -5,53 +5,68 @@ $back:#F25C5C;
 $grey:#F2F2F2;
 $border:#A6A6A6;
 $hei:#000;
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{margin: 0 ; padding: 0; font-family: 'Montserrat', sans-serif;box-sizing: border-box}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+*{margin: 0 ; padding: 0; font-family: 'Montserrat', sans-serif;font-family: 'Poppins', sans-serif;box-sizing: border-box}
 
 
 
 body{font-size: 100%;}
 
-html{scroll-behavior: smooth;}
+html{scroll-behavior: smooth; overflow-x: hidden;}
 
-h1{font-size: 2rem;}
-h3{font-size: 1.2rem;}
-p,a{font-size: 1rem;}
 
 .display, .p1-box, .p2-item, .p3-item-box{display: flex;justify-content: flex-start;align-items: center;}
 
-nav{align-items: center;padding: 0 2em;}
-.img-nav{width: 40%;}
+nav{align-items: center;padding: 0 2em;overflow: hidden;}
+.img-nav{width: 30%;}
 
 
-.p1{background: linear-gradient(rgba(0,0,0,.7)), url(/image/img-1.jpeg);min-height: 100vh;background-position: center;background-size: cover;}
-.p1-box{justify-content: flex-start;color: #fff;width: 80%;padding: 2em;}
+
+.p1{background: url(/image/fundo-6.png);min-height: 100vh;background-position: center;background-size: cover;position: relative;}
+.p1-box{justify-content: flex-start;color: #000;width: 50%;padding: 2em;}
 .p1 h1{font-size: 2rem;}
-.p1 p{margin: 1em 0 2em;}
-.btn-home, .btn-p2{padding: 1em 2em;color: #fff;background: $accent;text-decoration: none;font-weight: 600;font-size: .8em;}
+.p1 p{margin: .5em 0 2em;}
+.btn-home, .btn-p2{padding: 1em 2em;color: #fff;background: $accent;text-decoration: none;font-weight: 600;font-size: .8em;border-radius: 2em;}
 
-.p2{background: $back;}
+.p2{background: #F2F2F2;}
 .p2-item{padding: 2em;}
 .p2-item h1{width: 70%;color: $primary;font-size: 1.5rem;}
 
-.p3{padding: 2em 2em 0 2em;}
-.p3-box{display: grid;grid-template-columns: 40% 60%;align-items: center;}
-.p3-item{padding:0 0em;}
-.p3-item-box{flex-wrap: wrap;align-items: flex-start;}
-.p3-item-1{width: 45%;padding: 1em;margin: .5em;border-radius: .5em;}
-.p3-item-1:hover{box-shadow: 0 0 1em #E5E3DB}
-.padding-left{padding-right: 1em;}
-.p3 img{width: 20%;}
-.p3 h3{font-size: 1.2rem;margin: .5em 0;}
-.p3 p{font-size: .8rem;}
+.p3{padding: 2em 2em 0 2em;background: #f2f2f2;}
+.p3-box{display:flex;flex-direction: column;justify-content: center;align-items: center;text-align: center;}
+.p3-item-box{display: flex;align-items: flex-start;}
+.p3-item-1{padding: 1em;margin: 1em;border-radius: 1em;background: #fff;box-shadow: 0 0 .5em #F2F2F2;height: 100%;}
+.p3 p{margin: .5em 0;}
+.p3 img{width: 30%;height: auto;}
+.p3-item-1 p{color: #595959;}
 
-.p4{background: $grey;flex-direction: column;text-align: center;padding: 2em;}
-.p4 h1{color: $accent;}
-.p4 p{margin: .5em 0;font-size: .8rem;}
+.youtube{background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(/image/camera.jpeg);background-position: center;
+    background-size: cover;background-attachment: fixed;min-height: 50vh;display: grid;place-items: center;color: $primary;}
 
-.p5{align-items: flex-start;padding: 0 2em 2em;text-align: center;background: $grey;}
+.p4{background: url(/image/fundo-1.png);background-position: center;background-size: cover;position: relative;}
+.p4{flex-direction: column;padding: 2em;min-height: 100vh;align-items: flex-end;}
+.p4-projects{width: 90%;display: flex;align-items: flex-start;justify-content: flex-end;}
+.p4-projects h3{text-align: right;margin:.5em;text-align: center;}
+.p4_box{display: flex;width: 45%;text-align: right;align-items: flex-end;justify-content: flex-end;margin: 1em 0 0;
+flex-direction: column;}
+.p4_box img{width: 10%;height: auto;}
+.p4-carousel{width: 60%;}
+.p4_item{display: flex;align-items: center;width: 50%;flex-direction: column;text-align: center;
+    box-shadow: 0 0 .5em#F2B279;padding: 1em;border-radius: 1em;margin: .5em;}
+    .p4_item img{margin: 0 0em 0 0em;width: 10%;display: block;margin: 1em auto;}
+
+.p4 h1{text-align: center;align-self: center;}
+.p4 h2{color: $accent;}
+.p4 p, .p4 ul{margin: .5em 0;width: 70%;}
+.p4 ul{list-style-position: inside; }
+
+.p5{background: url(/image/fundo-3.png);background-position: center;background-size: cover;}
+.p5{align-items: flex-start;padding: 0 2em 2em;text-align: left;justify-content: center;}
 .p5 img{width: 15%;}
 .p5 h3{font-weight: 500;}
+.p5 p{width: 60%;}
 
 .p6{background: $grey;justify-content: center;padding:0 2em 2em;}
 
@@ -64,41 +79,50 @@ nav{align-items: center;padding: 0 2em;}
 .p7 h3{font-size: .9rem;margin: .5em;}
 .p7 p{font-size: .7rem;}
 
-.p8{flex-direction: column;background: $back;color: $primary;padding: 2em;}
+.p8{flex-direction: column;background: #F2B279;color: $primary;padding: 2em;}
 .p8 p{margin: 1em 0 2em;}
 
-.p9{padding: 2em;}
+.p9{padding: 2em;flex-direction: row-reverse;align-items: flex-start;}
 .p9-item{width: 50%;}
-.p9-item-1{margin: 1em 0;}
-.form-back{box-shadow: 0 0 1em #E5E3DB;padding: 2em;border-radius: .5em;}
+.p9-item-1{margin: 0em 0;display: flex;}
+.p9-item-1 img{width: 5%;margin: 0 1em 0 0em;}
+.form-back{box-shadow: 0 0 1em #E5E3DB;padding: 2em;border-radius: .5em;margin: 0 2em 0 0em;}
 .line{height: .4em;width: 15%;background-color: $accent;}
-.p9 h2{margin: 1em 0;color: #8C030E;}
+.p9 h2{margin: 0em 0 1em;color: #8C030E;}
+.p9 h3{font-weight: 400;}
 
+footer{background:#F2B8A2;}
 footer p{font-size: .7rem;padding: 1vh 0;margin: 0 3vw;}
 .alert p{display: block;width: 80%;margin: 0 auto;text-align: center;font-size: .5rem;}
-footer p a{color: $accent; text-decoration: none;}
+footer p a{color: #000; text-decoration: none;}
 .f-i{display: flex;justify-content: space-between;}
+
+.hidden{display: none;}
 
 @media screen and (max-width:900px){
 
-    .p2-item{flex-direction: column;text-align: center;}
+   .p1{background: #fff;}
 
-    .p3-box{grid-template-columns: 100%;text-align: center;}
-    .p3-item-box{flex-direction: column;align-items: center;}
-    .p3-item-1{width: 100%;}
-    .p3 img{width: 40%;}
-
-    .padding-left{padding-right: 0;}
-
-    .p5{flex-direction: column;text-align: center;align-items: center;}
-    .p5-item{margin: 1em 0;}
+   .p1{text-align: center;justify-content: center;align-items: center;}
+    .p1-box{width: 100%;}
 
 
-    
-    .p8, .p7{text-align: center;}
-    .p7-box{grid-template-columns: 100%;text-align: left;}
+    .p3-item-box, .p9{flex-direction: column;}
 
-    .p9{flex-direction: column;}
+    .youtube, .p8{text-align: center;}
+
+    .p4{align-items: center;}
+    .p4-projects{flex-direction: column;width: 100%;}
+    .p4_box{width: 100%;text-align: center;justify-content: center;align-items: center;}
+    .p4-carousel{width: 100%;}
+    .p4_item{width: 100%;}
+    .p4_item img{width: 20%;}
+
+    .p4{background: #f2f2f2;}
+
+    .p4{padding: 1em;}
+
     .p9-item{width: 100%;}
 
+    .f-i{flex-direction: column;}
 }
