--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $hei:#000;
 
 
 body{font-size: 100%;overflow-x: hidden;}
-main{overflow-x: hidden;}
+main{overflow: hidden;}
 
 html{scroll-behavior: smooth; }
 
