--- a/css-2/font.css
+++ b/css-2/font.css
@@ -1,4 +1,4 @@
-h1{font-size: clamp( 1.8rem, 2vw + 1rem, 2rem)}
-h3{font-size:clamp( 1.3rem, 1.6vw + 1rem, 1.4rem);}
-h4{font-size:clamp( 1rem, 2vw + 1rem, 1.3rem)}
-p{font-size: clamp( .8rem, .8vw + 1rem, 1.1rem);}
+h1{font-size: clamp( 1.8rem, 2vw + 1rem, 3rem)}
+h3{font-size:clamp( 1.3rem, 1.6vw + 1rem, 1.8rem);}
+h4{font-size:clamp( 1rem, 2vw + 1rem, 1.6rem)}
+p{font-size: clamp( .8rem, 1vw + 1rem, 1.4rem);}
