--- a/css/main.scss
+++ b/css/main.scss
@@ -62,6 +62,7 @@ flex-direction: column;}
 .p4 h2{color: $accent;}
 .p4 p, .p4 ul{margin: .5em 0;width: 70%;}
 .p4 ul{list-style-position: inside; }
+.p4_box h4{color: #595959;font-weight: 500;}
 
 .p5{background: url(/image/fundo-3.png);background-position: center;background-size: cover;}
 .p5{align-items: flex-start;padding: 0 2em 2em;text-align: left;justify-content: center;}
