--- a/css-2/menu-hambuguer.css
+++ b/css-2/menu-hambuguer.css
@@ -17,7 +17,7 @@ nav.black img{width: 15%;}
 
 @media (max-width:900px){
     nav .mainMenu{min-height: 50vh;position: fixed;top: 0;left: 0;right: 0;z-index: 10;flex-direction: column;
-    justify-content: center;align-items: center;background: #eb0808;transition: top 1s ease;display: none;}
+    justify-content: center;align-items: center;background: #F2B279;transition: top 1s ease;display: none;}
  
     nav .mainMenu .closeMenu{display: block;position: absolute;top: 1em;right: 1em;}
     nav .openMenu{display: block;color: #000;}
