--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ nav {
 }
 
 .p1 {
-  background: url(/image/fundo-6.png);
+  background: url(/image/back11.png);
   min-height: 100vh;
   background-position: center;
   background-size: cover;
@@ -68,13 +68,17 @@ nav {
 }
 
 .p1 p {
-  margin: .5em 0 2em;
+  margin: 0em 0 .5em;
+}
+
+.bottom-p {
+  padding-bottom: 1em;
 }
 
 .btn-home, .btn-p2 {
   padding: 1em 2em;
   color: #fff;
-  background: #eb0808;
+  background: #f25c5c;
   text-decoration: none;
   font-weight: 600;
   font-size: .8em;
@@ -156,10 +160,36 @@ nav {
   background-size: cover;
   background-attachment: fixed;
   min-height: 50vh;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   color: #fff;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.youtube img {
+  width: 20%;
+  height: auto;
+  margin: 0 1em 0;
+}
+
+.youtube .p1-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.youtube h1 {
+  display: block;
+  margin: 0 auto;
 }
 
 .p4 {
@@ -204,7 +234,7 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 45%;
+  width: 100%;
   text-align: right;
   -webkit-box-align: end;
       -ms-flex-align: end;
@@ -256,14 +286,11 @@ nav {
 }
 
 .p4 h1 {
-  text-align: center;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  text-align: right;
 }
 
 .p4 h2 {
-  color: #eb0808;
+  color: #f25c5c;
 }
 
 .p4 p, .p4 ul {
@@ -284,13 +311,17 @@ nav {
   background: url(/image/fundo-3.png);
   background-position: center;
   background-size: cover;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding-top: 2em;
 }
 
 .p5 {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 0 2em 2em;
+  padding: 2em 2em 2em;
   text-align: left;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -307,6 +338,12 @@ nav {
 
 .p5 p {
   width: 60%;
+}
+
+.p5_box {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .p6 {
@@ -354,7 +391,7 @@ nav {
 }
 
 .p7 h1 {
-  color: #eb0808;
+  color: #f25c5c;
 }
 
 .p7 h3 {
@@ -386,13 +423,40 @@ nav {
   -webkit-box-direction: reverse;
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: url(/image/phone-person.jpeg);
+  background-size: cover;
+  background-position: center;
+}
+
+.p9-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 2em;
+  width: 80%;
+  background: #f25c5c;
+  background: rgba(242, 92, 92, 0.4);
+  border-radius: .5em;
 }
 
 .p9-item {
-  width: 50%;
+  width: 100%;
 }
 
 .p9-item-1 {
@@ -407,31 +471,33 @@ nav {
   margin: 0 1em 0 0em;
 }
 
+.p9 h3 {
+  color: #fff;
+}
+
 .form-back {
-  -webkit-box-shadow: 0 0 1em #E5E3DB;
-          box-shadow: 0 0 1em #E5E3DB;
-  padding: 2em;
   border-radius: .5em;
-  margin: 0 2em 0 0em;
+  margin: 1em 2em 0 0em;
+  width: 80%;
 }
 
 .line {
   height: .4em;
   width: 15%;
-  background-color: #eb0808;
+  background-color: #F2B279;
 }
 
 .p9 h2 {
   margin: 0em 0 1em;
-  color: #8C030E;
+  color: #fff;
 }
 
 .p9 h3 {
-  font-weight: 400;
+  font-weight: 200;
 }
 
 footer {
-  background: #F2B8A2;
+  background: #fff;
 }
 
 footer p {
@@ -522,13 +588,28 @@ footer p a {
   .p4_item img {
     width: 20%;
   }
+  .p4 h1, .p5 h1 {
+    text-align: center;
+  }
+  .youtube, .youtube .p1-item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
   .p4 {
     background: #f2f2f2;
   }
   .p4 {
     padding: 1em;
   }
-  .p9-item {
+  .p5 p {
+    width: 100%;
+  }
+  .p9 {
+    padding: 1em;
+  }
+  .p9-item, .p9-box {
     width: 100%;
   }
   .f-i {
