--- a/css/main.scss
+++ b/css/main.scss
@@ -115,7 +115,7 @@ footer p a{color: #000; text-decoration: none;}
 .hidden{display: none;}
 
 @media screen and (max-width:900px){
-    nav{padding: 1em;}
+    nav{padding: 0;}
    .p1{background: #fff;}
 
    .p1{text-align: center;justify-content: center;align-items: center;}
