--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,9 @@ html{scroll-behavior: smooth; }
 
 nav{align-items: center;padding: 0 2em;overflow: hidden;}
 .img-nav{width: 30%;}
+nav.black{background:#fff;box-shadow: 0 0 30px #f1f1f1;position: fixed;z-index: 100;}
+nav.black img{width: 15%;}
+
 
 
 
