--- a/css/main.css
+++ b/css/main.css
@@ -516,7 +516,7 @@ footer p a {
     padding: 1em;
     background-repeat: no-repeat;
     background-position: right top;
-    background-size: auto 60%;
+    background-size: auto 40%;
   }
   .p1 {
     text-align: left;
@@ -540,12 +540,7 @@ footer p a {
     text-align: center;
   }
   .p4 {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background-position: left top;
-    background-size: auto 50%;
-    background-repeat: no-repeat;
+    background: #f2f2f2;
   }
   .p4-projects {
     -webkit-box-orient: vertical;
@@ -553,9 +548,6 @@ footer p a {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 100%;
-  }
-  .p4-box {
-    padding: 40ch 0 0;
   }
   .p4-carousel {
     width: 100%;
