--- a/css/main.scss
+++ b/css/main.scss
@@ -112,7 +112,7 @@ footer p a{color: #000; text-decoration: none;}
 @media screen and (max-width:900px){
     nav{padding: 0;}
     .p1{padding: 1em;background-repeat: no-repeat;background-position: right top;
-    background-size: auto 60%;}
+    background-size: auto 40%;}
     .p1{text-align: left;}
     .p1-box{width: 100%;padding: 30ch 0 0 ;}
     .appereace{display: block;width: 50%;height: auto;}
@@ -121,10 +121,8 @@ footer p a{color: #000; text-decoration: none;}
 
     .youtube, .p8{text-align: center;}
 
-    .p4{align-items: center;background-position: left top;background-size: auto 50%;
-        background-repeat: no-repeat;}
+    .p4{background: #f2f2f2;}
     .p4-projects{flex-direction: column;width: 100%;}
-    .p4-box{padding: 40ch 0 0 ;}
     .p4-carousel{width: 100%;}
     .p4_item{width: 100%;}
     .p4-item img{width: 100%;}
