--- a/css/main.scss
+++ b/css/main.scss
@@ -24,7 +24,7 @@ nav{align-items: center;padding: 0 2em;overflow: hidden;}
 .img-nav{width: 30%;}
 
 nav.black{background:#fff;box-shadow: 0 0 30px #f1f1f1;position: fixed;z-index: 100;width: 100%;top: 0;left: 0;}
-nav.black img{width: 15%;}
+nav.black img{width: 20%;}
 
 .p1{background: url(/image/back11.png);min-height: 100vh;background-position: center;background-size: cover;position: relative;}
 .p1-box{justify-content: flex-start;color: #000;width: 50%;padding: 2em;}
@@ -110,6 +110,10 @@ footer p a{color: #000; text-decoration: none;}
 .hidden{display: none;}
 
 @media screen and (max-width:900px){
+
+    .img-nav{width: 40%;}
+    nav.black img{width: 25%;}
+
     nav{padding: 0;}
     .p1{padding: 1em;background-repeat: no-repeat;background-position: right top;
     background-size: auto 40%;}
